--- a/BookStore/BookStore/Views/Home/Save.cshtml
+++ b/BookStore/BookStore/Views/Home/Save.cshtml
@@ -18,6 +18,6 @@
                     <input type="date" name="BirthDate" /> </td></tr>
                 <tr><td><input type="submit" value="save" /> </td><td></td></tr>
             </table>
-            <a href="/Home/All_person">All person list</a>
+            <!--<a href="/Home/All_person">All person list</a>-->
         </form>
     </div>
