--- a/BookStore/BookStore/Views/Home/Index.cshtml
+++ b/BookStore/BookStore/Views/Home/Index.cshtml
@@ -14,6 +14,7 @@
                 <td><p>@b.Id</p></td>
                 <td><p>@b.Name</p></td>
                 <td><p><a href="/Home/Save/@b.Id">Add a person to this department</a></p></td>
+                <td><p><a href="/Home/All_person/@b.Id">All person list</a></p></td>
             </tr>
         }
     </table>
