--- a/BookStore/BookStore/Views/AllPerson/AllPerson.cshtml
+++ b/BookStore/BookStore/Views/AllPerson/AllPerson.cshtml
@@ -1,16 +1,7 @@
-﻿
+﻿@model IEnumerable<BookStore.Models.Person>
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>All_person</title>
-</head>
-<body>
 <div>
     <h3>All persons of department</h3>
     <table>
@@ -22,7 +13,7 @@
             <td><p>Day of Birth</p></td>
             <td><p>Department code</p></td>
         </tr>
-        @foreach (var b in ViewBag.Persons)
+        @foreach (var b in Model)
         {
             <tr>
                 <td><p>@b.PersonId</p></td>
@@ -36,5 +27,3 @@
     </table>
     <a href="/Home">Return to star page</a>
 </div>
-</body>
-</html>
