--- a/BookStore/BookStore/Views/Home/Index.cshtml
+++ b/BookStore/BookStore/Views/Home/Index.cshtml
@@ -1,22 +1,24 @@
-﻿@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
-<div>
-    <h3>Human Resources Department</h3>
-    <table>
-        <tr class="header"><td><p>Number</p></td>
-            <td><p>Department name</p></td>
-            <td></td>
-        </tr>
-        @foreach (var b in ViewBag.Departments)
-        {
-            <tr>
-                <td><p>@b.Id</p></td>
-                <td><p>@b.Name</p></td>
-                <td><p><a href="/Home/Save/@b.Id">Add a person to this department</a></p></td>
-                <td><p><a href="/Home/All_person/@b.Id">All person list</a></p></td>
+﻿@model IEnumerable<BookStore.Models.Department>
+    @{
+        Layout = "~/Views/Shared/_Layout.cshtml";
+    }
+    <div>
+        <h3>Human Resources Department</h3>
+        <table>
+            <tr class="header">
+                <td><p>Number</p></td>
+                <td><p>Department name</p></td>
+                <td></td>
             </tr>
-        }
-    </table>
-    <a href="/Home/New_Dep">Add a new department</a>
-</div>
+            @foreach (var b in Model)
+            {
+                <tr>
+                    <td><p>@b.Id</p></td>
+                    <td><p>@b.Name</p></td>
+                    <td><p><a href="/AddPerson/AddPerson/@b.Id">Add a person to this department</a></p></td>
+                    <td><p><a href="/AllPerson/AllPerson/@b.Id">All person list</a></p></td>
+                </tr>
+            }
+        </table>
+        <a href="/New_Dep/New_Dep">Add a new department</a>
+    </div>
