--- a/BookStore/BookStore/Views/New_Dep/New_Dep.cshtml
+++ b/BookStore/BookStore/Views/New_Dep/New_Dep.cshtml
@@ -1,11 +1,11 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
- 
+@model IEnumerable<BookStore.Models.Department> 
 <div>
     <h3>New department adding</h3>
     <form method="post" action="">
-        <input type="hidden" value="@ViewBag.Id" name="Id" />
+        <input type="hidden" value="Model.Id" name="Id" />
         <table>
             <tr><td><p>write the name</p></td>
                 <td><input type="text" name="Name" /> </td>
